[gd_scene load_steps=5 format=2]

[ext_resource path="res://tiles/warningFrame.png" type="Texture" id=1]
[ext_resource path="res://fonts/decorative_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://menuTheme.tres" type="Theme" id=3]
[ext_resource path="res://PauseModal.gd" type="Script" id=4]

[node name="PauseModal" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Backdrop"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Backdrop/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -166.0
margin_right = 166.0
margin_bottom = 166.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Backdrop/ColorRect/NinePatchRect"]
margin_left = 16.0
margin_top = 16.0
margin_right = 316.0
margin_bottom = 316.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Control" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_right = 311.0
margin_bottom = 10.0
size_flags_vertical = 3

[node name="Title" type="Label" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 311.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "I18N_PAUSE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 62.0
margin_right = 311.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 64 )
text = "I18N_RESUME"

[node name="RestartButton" type="Button" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 138.0
margin_right = 311.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 64 )
text = "I18N_RESTART"

[node name="ExitButton" type="Button" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 214.0
margin_right = 311.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 64 )
text = "I18N_EXIT"

[node name="Footer" type="Control" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 290.0
margin_right = 311.0
margin_bottom = 300.0
size_flags_vertical = 3

[connection signal="pressed" from="Backdrop/ColorRect/NinePatchRect/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Backdrop/ColorRect/NinePatchRect/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Backdrop/ColorRect/NinePatchRect/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
